# donutvulkan

./: .gitignore  .ninja_log  CMakeLists.txt  LICENCE  README  README.md  TODO.norg  abstract_renderer.cc  abstract_renderer.h  build.ninja  config.h  main.cc  renderer.cc  renderer.cpp  renderer.h
cmake/: CompileShaders.cmake  doctest.cmake
quaternion/: CMakeLists.txt  quaternion.cpp  quaternion.h
quaternion/src/: quaternion.h  rotation.cc  rotation.h  vec3.h
quaternion/tests/: CMakeLists.txt  main.cc
src/allocator/: CMakeLists.txt
src/allocator/include/allocator/: arena.h
src/allocator/src/: arena.cc
src/allocator/tests/: CMakeLists.txt  main.cc
src/app/: config.h  cube.cc  cube.h  donut.cc  donut.h  main.cc  renderer.cc  renderer.h
src/core/: CMakeLists.txt
src/core/include/: abstract_renderer.h  object.h  point_info.h  rotation.h  vec3.h
src/core/include/core/: quaternion.h  result.h  vec3.h  vulkan_renderer.h
src/core/src/: abstract_renderer.cc  consts.h  instance.cc  instance.h  logical_device.cc  logical_device.h  physical_device.cc  physical_device.h  queue_families.cc  queue_families.h  result.cc  rotation.cc  swap_chain.cc  swap_chain.h  swap_chain_support_details.cc  swap_chain_support_details.h  vulkan_renderer.cc  vulkan_renderer_impl.cc  vulkan_renderer_impl.h
src/core/tests/: CMakeLists.txt  main.cc
